# clip

./: .gitattributes  .gitignore  .rvmrc  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  Dockerfile  Gemfile  IDEAS  LICENSE  Makefile  Makefile.am  NOTICE  Procfile  README.md  Rakefile  TODO  V1.0-ROADMAP  areachart.cc  areachart.h  autogen.sh  axisdefinition.cc  axisdefinition.h  barchart.cc  barchart.h  canvas.cc  canvas.h  concept.txt  configure.ac  domain.cc  domain.h  domainprovider.cc  drawable.cc  drawable.h  em_runner.rb  example_server.rb  fnord  fnord_tracker.rb  fnordmetric.gemspec  (+38 more)
cmake/: CMakeLists.txt  Makefile  assets.sh  assets.txt  config.h.in  fubar.gen.cc
core/libcplot/: CMakeLists.txt  Makefile.am  areachart.cc  areachart.h  barchart.cc  canvas.cc  canvas.h  chart_test.cc  colorpalette.h  continuousdomain.h  discretedomain.h  domainprovider_impl.h  drawable.cc  griddefinition.h  legenddefinition.cc  libcplot.h  linechart.h  pointchart.cc  series.cc  series.h  seriesjoin.h
core/util/: CMakeLists.txt  CivilTime_impl.h  UnixTime.h  autoref.cc  buffer.cc  buffer.h  bufferutil.cc  bufferutil.h  daemonize.cc  duration_impl.h  exception.cc  exception.h  file.cc  file.h  fileutil.cc  fileutil.h  format.cc  ieee754.cc  ieee754.h  inputstream.cc  inputstream.h  inspect.cc  inspect.h  inspect_impl.h  logging.cc  outputstream.cc  outputstream.h  random.cc  random.h  stdtypes.h  stringutil.cc  stringutil.h  stringutil_impl.h  stringutil_test.cc  time.cc  time_constants.h  vmath.cc  wallclock.cc
fnord-base/: CMakeLists.txt  application.cc  application.h  buffer.cc  buffer.h  datetime.cc  datetime.h  duration.cc  duration.h  exception.h  exceptionhandler.cc  exceptionhandler.h  ieee754.cc  ini_parser.cc  ini_parser_test.cc  inspect.cc  inspect.h  logging.cc  option_impl.h  random.cc  random.h  stringutil.cc  stringutil_test  stringutil_test.cc  traits.h  uri.cc  uri.h  uri_test.cc  wallclock.h
fnord-base/cli/: flagparser.cc
fnord-base/io/: file.cc  filerepository.cc  inputstream.cc  inputstream_test.cc  pagemanager.cc  pagemanager.h  pagemanager_test.cc
fnord-base/logging/: logger.h  logger_impl.h  loglevel.h  logoutputstream.cc  logtarget.h
fnord-base/net/: acceptor.cc  dnscache.h  inetaddr.cc  tcpconnection.cc  tcpconnection.h  tcpserver.cc  tcpserver.h  udpserver.cc  udpserver.h  udpsocket.cc  udpsocket.h
fnord-base/reflect/: methodcall.h  methodcall_impl.h  (+1 more)
fnord-feeds/: CMakeLists.txt  FeedEntry.h  FeedService.cc  FeedService.h  LocalFeed.cc  LocalFeed.h  RemoteFeed.cc  RemoteFeed.h  RemoteFeedCache.h  RemoteFeedFactory.cc  RemoteFeedFactory.h  RemoteFeedReader.cc  RemoteFeedReader.h  RemoteFeedWriter.cc  RemoteFeedWriter.h  feeds_example.cc  feeds_test.cc  fn-feedtail.cc
fnord-fts/: ASCIIFoldingFilter.h  AUTHORS  AbstractField.h  AllTermDocs.h  Analyzer.h  Array.h  Attribute.h  AttributeSource.h  Base64.h  BaseCharFilter.h  BitSet.h  BitUtil.h  BitVector.h  BooleanClause.h  BufferedDeletes.h  BufferedIndexInput.h  BufferedReader.h  ByteBlockPool.h  ByteFieldSource.h  ByteSliceReader.h  ByteSliceWriter.h  CMakeLists.txt  COPYING  CachingSpanFilter.h  CachingWrapperFilter.h  CharArraySet.h  CharBlockPool.h  CharFolder.h  CheckIndex.h  ChecksumIndexInput.h  ChecksumIndexOutput.h  CloseableThreadLocal.h  Collator.h  Collection.h  Collector.h  ComplexExplanation.h  CompoundFileReader.h  CompoundFileWriter.h  CompressionTools.h  ConcurrentMergeScheduler.h  (+288 more)
fnord-http/: CMakeLists.txt  cookies.cc  cookies.h  http_test.cc  httpclient.cc  httpclient.h  httpclientconnection.cc  httpclientconnection.h  httpconnectionpool.cc  httpconnectionpool.h  httpgenerator.cc  httpgenerator.h  httphandler.h  httpmessage.cc  httpparser.cc  httpparser.h  httprequest.cc  httprequest.h  httpresponse.cc  httpresponse.h  httpresponsefuture.cc  httpresponsefuture.h  httprouter.h  httprouter_impl.h  httpserver.cc  httpserver.h  httpserver_example.cc  httpserverconnection.cc  httpserverconnection.h  httpservice.cc  httpservice.h  httpstats.h
fnord-json/: CMakeLists.txt  JSONRPCCodec.h  flatjsonreader.cc  json.cc  json.h  json_impl.h  json_test.cc  jsondocument.cc  jsondocument_impl.h  jsoninputstream.cc  jsoninputstream.h  jsonoutputstream.cc  jsonoutputstream.h  jsonpointer.cc  jsonrpc.cc  jsonrpc.h  jsonrpchttpadapter.cc  jsonrpcrequest.cc  jsonrpcrequest.h  jsonrpcresponse.h  jsontypes.h  jsonutil.h
fnord-metricdb/: CMakeLists.txt  httpapiservlet.cc  httpapiservlet.h  metric.cc  metric.h  metricrepository.cc  metricservice.h  metricservice_example.cc  sample.cc  sample.h  timeseriesquery.cc  timeseriesquery.h
fnordmetric-core/: .gitignore  .travis.yml  CMakeLists.txt  Gemfile  Makefile  Rakefile  agent.cc  agent.h  agent_impl.h  aocollection.cc  aocollection.h  autogen.sh  backend.h  clock.h  collection.cc  collection.h  database_test.cc  documentkey.cc  documentref.cc  documentref.h  drawable.h  filebackend.cc  filebackend.h  fnordmetric.c  fnordmetric.cc  fnordmetric.gemspec  fnv.cc  fnv_test.cc  format.cc  format.h  memorybackend.cc  memorybackend.h  metric_test.cc  pageindex.cc  pageindex.h  pagemanager.cc  pagemanager.h  query.cc  query.h  query_test.cc  (+17 more)
libfnord/: CMakeLists.txt  Makefile  TODO
libtransport/: Makefile.am  TODO  configure.ac
libtsdb/: .gitignore  Makefile.am  TODO  cursor.cc  cursor.h  op_commit.cc  op_insert.cc  op_load.cc  page_buffer.cc  page_buffer.h  page_index.cc  page_index.h  page_map.cc  page_map.h  transaction.cc  transaction.h  tsdb.cc  tsdb.h  varint.cc  varint.h
metricd/: .gitignore  Makefile.am  TODO  adminui.cc  aggregate.cc  aggregate.h  aggregate_impl.h  configure  configure.ac  fmetricd  metric.cc  metric.h  metric_cursor.cc  metric_cursor.h  metric_map.cc  metric_map.h  metric_service.cc  metric_service.h  metric_service_test.cc  metric_test.cc  metricd.cc  metricrepository.cc  metricrepository.h  metrictableref.cc  sample.cc  sample.h  summarize.cc  summarize.h  types.cc  types.h
test/: .gitignore  Makefile.am  aggregation_map_test.cc  config_parser_test.cc  metric_fetch_test.cc  smoketest.cc  test_runner.sh  unittest.h
(+6923 files in other folders)
