ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = foreign

export AM_CXXFLAGS = \
    -std=c++0x \
    -ftemplate-depth=500 \
    -mno-omit-leaf-frame-pointer \
    -fno-omit-frame-pointer \
    -g \
    -Wall \
    -Wextra \
    -Wno-unused-parameter \
    -Wno-sign-compare \
    -Wdelete-non-virtual-dtor \
    -Wno-predefined-identifier-outside-function \
    -Wno-invalid-offsetof \
    -DFNORDMETRIC_VERSION=\"v@PACKAGE_VERSION@\" \
    $(PTHREAD_CFLAGS) \
    -I$(abs_top_srcdir)/src \
    -I$(abs_top_srcdir)/deps/libtransport/src \
    -I$(abs_top_srcdir)/

FNORDMETRIC_LIBS = \
    $(abs_top_builddir)/src/fnordmetric/libfnordmetric-common.a \
    -L$(abs_top_builddir)/deps/libtransport/src/libtransport/http/libtransport_http.a \
    -L$(abs_top_builddir)/deps/libtransport/src/libtransport/json/libtransport_json.a \
    -L$(abs_top_builddir)/deps/libtransport/src/libtransport/uri \
    -ltransport_http \
    -ltransport_json \
    -ltransport_uri \
    $(abs_top_builddir)/src/fnordmetric/libfnordmetric-common.a

if ENABLE_MYSQL
  FNORDMETRIC_LIBS += $(abs_top_builddir)/src/fnordmetric/backends/mysql/libfnordmetric-backend-mysql.a
  FNORDMETRIC_LIBS += -lmysqlclient
endif

export FNORDMETRIC_LIBS

SUBDIRS = \
    . \
    deps/libtransport \
    src/fnordmetric/backends/mysql \
    src/fnordmetric \
    test

EXTRA_DIST =                             \
  autogen.sh                             \
  README.md                              \
  LICENSE                                \
  AUTHORS                                \
  CHANGELOG

dist_doc_DATA =                          \
  README.md                              \
  LICENSE                                \
  AUTHORS                                \
  CHANGELOG

# Deletes all the files generated by autogen.sh.
MAINTAINERCLEANFILES =   \
  aclocal.m4             \
  ar-lib                 \
  config.guess           \
  config.sub             \
  configure              \
  depcomp                \
  install-sh             \
  ltmain.sh              \
  Makefile.in            \
  missing                \
  mkinstalldirs          \
  config.h.in            \
  stamp.h.in             \
  m4/ltsugar.m4          \
  m4/libtool.m4          \
  m4/ltversion.m4        \
  m4/lt~obsolete.m4      \
  m4/ltoptions.m4

